# AI-Engineering-Henry-mudulo03

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/finance_docs/: manual.txt
data/hr_docs/: manual.txt
data/legal_docs/: manual.txt
data/tech_docs/: manual.txt
src/agents/: evaluator_agent.py  finance_agent.py  hr_agent.py  legal_agent.py  orchestrator.py  tech_agent.py
src/utils/: data_generator.py  vector_store.py
